--- a/project/product-management/mystyle/homepage.css
+++ b/project/product-management/mystyle/homepage.css
@@ -24,7 +24,7 @@
    justify-content: space-between;
 }
 
-h5{
+.container h5{
    font-size: 16px;
    font-weight: 400;
    color: white;
@@ -39,7 +39,7 @@ h5{
    width: 60px;
 }
 
-h6{
+.container h6{
    color: white;
 }
 
@@ -76,4 +76,34 @@ h6{
 .card-bottom button{
    padding: 5px;
    margin-right: 10px;
+}
+
+.button-remove{
+   position: absolute;
+   width: 30px;
+   height: 30px;
+   background: #e13737;
+   text-align: center;
+   line-height: 30px !important;
+   color: white;
+   border-radius: 30px;
+   cursor: pointer;
+   left: calc(100% - 20px);
+   top: -5px;
+   scale: 0;
+   transition: 0.2s ease-in-out;
+}
+
+.card-manager:hover {
+   box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
+}
+
+.card-manager:hover .button-remove{
+   scale: 1;
+}
+
+.remove-code{
+   font-weight: 600;
+   color: #e13737;
+   margin-right: 4px;
 }
