--- a/project/product-management/mystyle/homepage.css
+++ b/project/product-management/mystyle/homepage.css
@@ -67,17 +67,6 @@
    margin-bottom: -20px;
 }
 
-.card-bottom{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-}
-
-.card-bottom button{
-   padding: 5px;
-   margin-right: 10px;
-}
-
 .button-remove{
    position: absolute;
    width: 30px;
@@ -100,6 +89,10 @@
 
 .card-manager:hover .button-remove{
    scale: 1;
+}
+
+.card-manager .button-remove:hover{
+   box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
 }
 
 .remove-code{
