--- a/project/product-management/mystyle/homepage.css
+++ b/project/product-management/mystyle/homepage.css
@@ -10,6 +10,7 @@
    width: 100%;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
    margin: 10px 0px 0px 10px;
+   padding-top: 20px;
 }
 
 .card-head{ 
@@ -29,6 +30,7 @@
    font-size: 16px;
    font-weight: 400;
    color: white;
+   font-weight: 600;
 }
 
 .logo img{
@@ -42,6 +44,7 @@
 
 .container h6{
    color: white;
+   font-weight: 600;
 }
 
 .container .valid-date{
