--- a/project/product-management/mystyle/homepage.css
+++ b/project/product-management/mystyle/homepage.css
@@ -9,7 +9,7 @@
    max-width: 380px;
    width: 100%;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-   margin: 10px 0px 0px 10px;
+   margin: 10px 0px 0px 30px;
    padding-top: 20px;
 }
 
@@ -89,16 +89,40 @@
    box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
 }
 
-.card-manager:hover .button-remove{
+.card-manager:hover .button-remove,
+.card-manager:hover .button-update{
    opacity: 1;
 }
 
-.card-manager .button-remove:hover{
+.card-manager .button-remove:hover,
+.card-manager .button-update:hover{
    box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75);
 }
 
 .remove-code{
    font-weight: 600;
    color: #e13737;
+   margin-right: 4px;
+}
+
+.button-update{
+   position: absolute;
+   width: 30px;
+   height: 30px;
+   background: #3789e1;
+   text-align: center;
+   line-height: 30px !important;
+   color: white;
+   border-radius: 30px;
+   cursor: pointer;
+   left: -10px;
+   top: -5px;
+   opacity: 0;
+   transition: 0.3s ease-in-out;
+}
+
+.update-code{
+   font-weight: 600;
+   color: #3789e1;
    margin-right: 4px;
 }
