--- a/project/product-management/mystyle/signup.css
+++ b/project/product-management/mystyle/signup.css
@@ -75,6 +75,7 @@ header{
   inline-size: 90%;
   margin-inline: auto;
   max-inline-size: 20rem;
+  margin-top: 30px
 }
 
 /* helpers/hidden.css */
@@ -108,7 +109,7 @@ header{
 
 :root {
   --htmlFontSize: 100%;
-  --bodyBackgroundColor: #2c3338;
+  --bodyBackgroundColor: #173a52;
   --bodyColor: var(--baseColor);
   --bodyFontFamily: "Open Sans";
   --bodyFontFamilyFallback: sans-serif;
@@ -189,8 +190,8 @@ input[type="submit"] {
   --loginBorderRadus: 0.25rem;
   --loginColor: rgba(0, 0, 0, 0.84);
 
-  --loginInputBackgroundColor: #8396ac52;
-  --loginInputHoverBackgroundColor: #8396ac52;
+  --loginInputBackgroundColor: #d0d7e052;
+  --loginInputHoverBackgroundColor: #a9b8cc52;
 
   --loginLabelBackgroundColor: #b8c1cc;
 
@@ -262,6 +263,7 @@ p {
 .user{
   display: flex;
   align-items: baseline;
+  margin-top: 25px;
 }
 
 .email{
@@ -289,8 +291,14 @@ p {
 
 .border-invalid{
   border: 1px solid red;
+  background-color: #d0d7e052;
 }
 
 .align {  
-  margin-top: 30px;
+  background: #ffffff;
+  max-width: 400px;
+  min-height: 490px;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.5);
 }
