--- a/project/product-management/mystyle/signin.css
+++ b/project/product-management/mystyle/signin.css
@@ -1,8 +1,11 @@
+/* Google Font Import - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 *{
-  font-family: 'Poppins', sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+   font-family: 'Poppins', sans-serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
 body{
@@ -11,6 +14,29 @@ body{
   background-size: cover;
   max-height: 100vh;
 }   
+
+:root {
+  --htmlFontSize: 100%;
+  --bodyBackgroundColor: #173a52;
+  --bodyColor: var(--baseColor);
+  --bodyFontFamily: "Open Sans";
+  --bodyFontFamilyFallback: sans-serif;
+  --bodyFontSize: 0.875rem;
+  --bodyFontWeight: 400;
+  --bodyLineHeight: 1.5;
+  --baseColor: #606468;
+  --iconFill: var(--baseColor);
+  --anchorColor: #eee;
+  --formGap: 0.875rem;
+  --loginBorderRadus: 0.25rem;
+  --loginColor: rgba(0, 0, 0, 0.84);
+  --loginInputBackgroundColor: #d0d7e052;
+  --loginInputHoverBackgroundColor: #a9b8cc52;
+  --loginLabelBackgroundColor: #b8c1cc;
+  --loginSubmitBackgroundColor: #4c7eea;
+  --loginSubmitColor: #eee;
+  --loginSubmitHoverBackgroundColor: #4c7eea;
+}
 
 .anh{
   display: flex;
@@ -23,20 +49,17 @@ body{
   max-height: 520px;
 }
 
-
 .footerNew {
   position: fixed;
   background: #363844;
   font-size: 12px;
-  line-height: 24px;
+  /* line-height: 24px; */
   text-align: center;
   color: #FFFFFF;
-  padding: 25px 0px 15px;
-  font-style: normal;
-  font-weight: normal;
+  padding: 15px 0px 3px 0px;
   letter-spacing: 0.1px;
   width: 100%;
-  bottom: 0px;
+  bottom: 0;
 }
 
 .fSignIn{
@@ -61,29 +84,13 @@ header{
   margin-bottom: -10px;
 }
 
-@use postcss-preset-env {
-  stage: 0;
-}
-
-/* config.css */
-
-:root {
-  --baseColor: #606468;
-}
-
-/* helpers/align.css */
-
-.align {  
-  margin-top: 120px;
-}
-
 .grid {
   inline-size: 90%;
   margin-inline: auto;
   max-inline-size: 20rem;
+  margin-top: 110px;
+  padding-bottom: 10px;
 }
-
-/* helpers/hidden.css */
 
 .hidden {
   border: 0;
@@ -96,57 +103,8 @@ header{
   width: 1px;
 }
 
-/* helpers/icon.css */
-
-:root {
-  --iconFill: var(--baseColor);
-}
-
-.icons {
-  display: none;
-}
-
 .icon {
   font-size: 14px;
-}
-
-/* layout/base.css */
-
-:root {
-  --htmlFontSize: 100%;
-  --bodyBackgroundColor: #2c3338;
-  --bodyColor: var(--baseColor);
-  --bodyFontFamily: "Open Sans";
-  --bodyFontFamilyFallback: sans-serif;
-  --bodyFontSize: 0.875rem;
-  --bodyFontWeight: 400;
-  --bodyLineHeight: 1.5;
-}
-
-* {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: var(--htmlFontSize);
-}
-
-body {
-  background-color: var(--bodyBackgroundColor);
-  color: var(--bodyColor);
-  font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
-  font-size: var(--bodyFontSize);
-  font-weight: var(--bodyFontWeight);
-  line-height: var(--bodyLineHeight);
-  margin: 0;
-  /* min-block-size: 100vh; */
-}
-
-/* modules/anchor.css */
-
-:root {
-  --anchorColor: #eee;
 }
 
 a {
@@ -158,12 +116,6 @@ a {
 a:focus,
 a:hover {
   text-decoration: underline;
-}
-
-/* modules/form.css */
-
-:root {
-  --formGap: 0.875rem;
 }
 
 input {
@@ -193,24 +145,9 @@ input[type="submit"] {
   inline-size: 100%;
 }
 
-/* modules/login.css */
-
-:root {
-  --loginBorderRadus: 0.25rem;
-  --loginColor: rgba(0, 0, 0, 0.84);
-
-  --loginInputBackgroundColor: #8396ac52;
-  --loginInputHoverBackgroundColor: #8396ac52;
-
-  --loginLabelBackgroundColor: #b8c1cc;
-
-  --loginSubmitBackgroundColor: #4c7eea;
-  --loginSubmitColor: #eee;
-  --loginSubmitHoverBackgroundColor: #4c7eea;
-}
-
 .login {
   color: var(--loginColor);
+  margin-top: 25px;
 }
 
 .login label,
@@ -254,8 +191,6 @@ input[type="submit"] {
   background-color: var(--loginSubmitHoverBackgroundColor);
 }
 
-/* modules/text.css */
-
 p {
   margin-block: 1.5rem;
 }
@@ -272,6 +207,7 @@ p {
 .user{
   display: flex;
   align-items: baseline;
+  margin-top: 25px;
 }
 
 .email{
@@ -284,14 +220,30 @@ p {
   align-items: baseline;
 }
 
+.password-confirmation{
+  display: flex;
+  align-items: baseline;
+}
+
 .login i{
   margin-right: 10px;
 }
 
 .invalid{
   color: red;
+  font-style: italic;
 }
 
 .border-invalid{
   border: 1px solid red;
+  background-color: #d0d7e052;
+}
+
+.align {  
+  background: #ffffff;
+  max-width: 400px;
+  max-height: 100vh;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.5);
 }
