--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-body{
+*{
    font-family: Arial, Helvetica, sans-serif; 
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
+body{ 
    background-color: #e3f2fd;
-   box-sizing:border-box;
-   height: 100vh;
+   min-height: 100vh;
 }
 
 .head-wrap{
@@ -14,7 +19,7 @@ body{
 }
 
 .head-img{
-   margin-bottom: 0px;
+   margin-bottom: 0px;  
 }
 
 .img-wrap{
@@ -23,23 +28,26 @@ body{
    display: flex;
    align-items: center;
    justify-content: center;
-   /* background-color: #e9ec23c4; */
 }
 
 .card-wrap{
    display: flex;
    flex-wrap: wrap;
-   position: absolute;
+   position: relative;
+   margin: auto;
+   max-width: 1920px;
 }
 
 .card{
-   width: 17.7rem;
+   width: 17.5rem;
    margin: 10px 0px 0px 20px;
+   border: 1px solid rgb(185 185 185);
    overflow: hidden;
 }
 
 .card:hover{
    box-shadow: 0px 1px 8px 2px rgba(0,0,0,0.42);
+
 }
 
 .img-wrap i{
@@ -52,14 +60,9 @@ body{
    text-overflow: ellipsis;
    overflow: hidden;
    width: auto;
-   display: -webkit-box;
-   display: -moz-box;
-   display: box;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;
-   overflow: hidden;
-   text-overflow: ellipsis;
    -webkit-line-clamp: 2;
    -moz-line-clamp: 2;
    line-clamp: 2;
