--- a/project/portfolio/styles/style.css
+++ b/project/portfolio/styles/style.css
@@ -1,4 +1,3 @@
-/* Google Font Import - Poppins */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 .header {
   position: fixed;
@@ -30,8 +29,8 @@
 }
 
 html {
-  font-size: 90%;
-  overflow: hidden;
+  font-size: 80%;
+  overflow-x: hidden;
 }
 
 body {
@@ -149,11 +148,80 @@ section {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: purple;
   width: 800px;
   height: 800px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.home .profession-box .profession {
+  position: absolute;
+  left: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #754ef9;
+  transform: rotate(calc(90deg * var(--i)));
+  transform-origin: 400px;
+  padding: 13px 0;
+  background: #fdfdfd;
+}
+
+.home .profession-box .profession:nth-child(1) {
+  margin-left: 55px;
+}
+
+.home .profession-box .profession:nth-child(2) {
+  margin-top: 135px;
+}
+
+.home .profession-box .profession:nth-child(3) {
+  margin-left: -65px;
+}
+
+.home .profession-box .profession:nth-child(4) {
+  margin-top: -135px;
+}
+
+.home .profession-box .profession:nth-child(2),
+.home .profession-box .profession:nth-child(4) {
+  padding-bottom: 15px;
+}
+
+.home .profession-box i {
+  font-size: 3.2rem;
+}
+
+.home .profession-box h3 {
+  font-size: 2.2rem;
+  line-height: 1;
+  font-weight: 600;
+}
+
+.home .profession-box .circle {
+  width: 450px;
+  height: 450px;
+  border: 3px solid #754ef9;
+  border-radius: 50%;
+}
+
+.home .profession-container .overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-top: 400px solid #754ef9;
+  border-right: 400px solid #754ef9;
+  border-bottom: 400px solid #754ef9;
+  border-left: 400px solid transparent;
+}
+
+.home-img img {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  pointer-events: none;
 }/*# sourceMappingURL=style.css.map */
