--- a/project/portfolio/styles/style.scss
+++ b/project/portfolio/styles/style.scss
@@ -1,4 +1,3 @@
-/* Google Font Import - Poppins */
 $bg-color: #fdfdfd;
 $text-color: #333;
 $main-color: #754ef9;
@@ -24,8 +23,8 @@ $shadow-color: rgba(0, 0, 0, .2);
 }
 
 html {
-    font-size: 90%;
-    overflow: hidden; 
+    font-size: 80%;
+    overflow-x: hidden; 
 }
 
 body {
@@ -64,7 +63,7 @@ section {
     }
 }
 
-.home {
+.home { 
     h3 {
         font-size: 2.3rem;
         font-weight: 700;
@@ -126,7 +125,6 @@ section {
         position: absolute;
         top: 0;
         right: 0;
-        background-color: purple;
         width: 800px;
         height: 800px;
         border-radius: 50%;
@@ -134,5 +132,117 @@ section {
         justify-content: center;
         align-items: center;
         }
+    }
+}
+
+.home {
+    .profession-box {
+        .profession {
+            position: absolute;
+            left: 0;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            color : $main-color;
+            transform: rotate(calc(360deg / 4 * var(--i)));
+            transform-origin: 400px;
+            padding: 13px 0;
+            background: $white-color;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        .profession:nth-child(1) {
+            margin-left: 55px;
+        }
+    }
+}
+.home {
+    .profession-box {
+        .profession:nth-child(2) {
+            margin-top: 135px;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        .profession:nth-child(3) {
+            margin-left: -65px;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        .profession:nth-child(4) {
+            margin-top: -135px;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        .profession:nth-child(2),
+        .profession:nth-child(4){
+            padding-bottom: 15px;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        i {
+           font-size: 3.2rem;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        h3 {
+           font-size: 2.2rem;
+           line-height: 1;
+           font-weight: 600;
+        }
+    }
+}
+
+.home {
+    .profession-box {
+        .circle {
+           width: 450px;
+           height: 450px;
+           border: 3px solid $main-color;
+           border-radius: 50%;
+        }
+    }
+}
+
+.home {
+    .profession-container {
+        .overlay {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        border-top: 400px solid $main-color;
+        border-right: 400px solid $main-color;
+        border-bottom: 400px solid $main-color;
+        border-left: 400px solid transparent;
+        }
+    }
+}
+
+.home-img {
+    img {
+        // position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        pointer-events: none;
     }
 }
