--- a/Module-2/CSS/bt2/bt2.css
+++ b/Module-2/CSS/bt2/bt2.css
@@ -15,21 +15,16 @@ body {
 }
 
 .logo p {
-    margin-top: -5px;
+    margin-top: -2px;
     font-size: 30px;
 }
 
 .logo span{
-    border: 1px solid black;
     border-radius: 30%;
+    padding: 2px;
     color: white;
     background: red;
-}
-
-.topic a {
-    color: black;
-    margin-left: 10px;
-    margin-right: 10px;
+    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .topic {
@@ -37,6 +32,12 @@ body {
     margin-top: 10px;
     text-align: center;
     background: rgb(239, 234, 234);
+}
+
+.topic a {
+    color: black;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .left-content {
