--- a/Module-2/CSS/fb/style/header.css
+++ b/Module-2/CSS/fb/style/header.css
@@ -24,31 +24,6 @@ body {
     box-shadow: 0px 0.5px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.main {
-    height: 600px;
-    display: flex;
-    background: #efebeb ;
-}
-
-.main .left {
-    margin-top: 5px;
-    width: 30%;
-    height: 600px;
-    /* border: 1px solid black; */
-}
-
-.main .mid {
-    width: 40%;
-    height: 600px;
-    /* border: 1px solid black; */
-}
-
-.main .right {
-    width: 30%;
-    height: 600px;
-    /* border: 1px solid black; */
-}
-
 .search-box{
     width: 600px;
     height: 50px;
@@ -139,4 +114,19 @@ a:visited {
     margin-right: 20px;
 }
 
+.online {
+    position: relative;
+}
+
+.online::after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background: #41db51;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 
