--- a/Module-2/CSS/exam/style/main.css
+++ b/Module-2/CSS/exam/style/main.css
@@ -10,7 +10,7 @@
 
 .fb-container {
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -22,7 +22,7 @@
     left: 0;
     margin-top: 5px;
     width: 10%;
-    height: 1000px;
+    /* height: 100vh; */
     padding: 10px 14px;
     /* background-color: red; */
 }
@@ -30,7 +30,7 @@
 .fb-container .main-content {
     margin-top: 25px;
     width: 65%;
-    height: 1000px;
+    /* height: 100vh; */
 }
 
 .fb-container .right-sidebar {
