--- a/Module-2/CSS/fb/style/left-sidebar.css
+++ b/Module-2/CSS/fb/style/left-sidebar.css
@@ -46,9 +46,10 @@
     transition: var(--tran);
 }
 
-/* .left-ava {
+.left-ava {
     display: flex;
     align-items: center;
+    margin-top: -27px;
 }
 
 .left-avatar {
@@ -61,7 +62,7 @@
     background-image: url('../img/avatar.jpg');
     background-size: cover;
     background-position: center;
-} */
+}
 
 .watch {
     background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yS/r/k0KA7vAWVRx.png);
